Have DELETE, now UPDATE

--- a/ElectricBillingREST/src/main/webapp/index.html
+++ b/ElectricBillingREST/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ACME ELectric</title>
+<title>ACME Electric</title>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<h1>ACME Electric Record Company</h1>
-	<div class="row">
+	<div>
 		<form name="billForm">
 			<input type="number" name="billId">
 			<button name="lookup">Get Bill by Id</button>
