--- a/ElectricBillingREST/src/main/webapp/index.html
+++ b/ElectricBillingREST/src/main/webapp/index.html
@@ -36,11 +36,11 @@
 		<div id="showLeft" class="col-sm-1">
 			.col
 		</div>
-		<div id="show" class="col-sm-7">
+		<div id="show" class="col-sm-4">
 			<span id="display" ></span>
 		</div>
-		<div id="showRight" class="col-sm-1">
-			.col
+		<div id="showRight" class="col-sm-4">
+			<span id="update" ></span>
 		</div>
 	</div>
 </body>
