--- a/ElectricBillingREST/src/main/webapp/index.html
+++ b/ElectricBillingREST/src/main/webapp/index.html
@@ -1,84 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>ACME Electric</title>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="css/styles.css" type="text/css">
-<script type="text/javascript" src="js/electricScript.js"></script>
-</head>
+  <meta charset="utf-8">
+  <title>NgElectricBill</title>
+  <base href="/ElectricBillingREST/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
 <body>
-	<img alt="A lightbulb" src="images/standard-light-bulb.png">
-	<h1>ACME Electric Record Company</h1>
-	<div class="row">
-		<div id="sidebarLeft" class="col-sm-2">
-		</div>
-		<div id="sidebarLeft" class="col-sm-4">
-			<form name="billForm">
-				<input type="number" name="billId">
-				<button name="lookup">Get Bill by Id</button>
-			</form>
-		</div>
-		<div id="sidebarLeft" class="col-sm-4">
-			<form name="initCreate">
-				<button name="initialize">Add Bill</button>
-			</form>
-		</div>
-		<div id="sidebarLeft" class="col-sm-2">
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-2">
-		</div>
-		<div id="create" class="col-sm-8">
-		</div>
-		<div class="col-sm-2">
-		</div>
-	</div>
-	<div class="row">
-		<div id="sidebarLeft" class="col-sm-1">
-		</div>
-		<div id="sidebar" class="col-sm-3">
-			<table>
-				<tbody>
-					<tr>
-						<td>Total Years of Transactions   </td>
-						<td id="totalYears"></td>
-					</tr>
-					<tr>
-						<td>Total Costs</td>
-						<td id="totalCosts"></td>
-					</tr>
-					<tr>
-						<td>Total Wattage Used</td>
-						<td id="totalWattage"></td>
-					</tr>
-					<tr>
-						<td>Average Yearly Costs</td>
-						<td id="averageCosts"></td>
-					</tr>
-					<tr>
-						<td>Average Yearly Wattage Used   </td>
-						<td id="averageWattage"></td>
-					</tr>
-				</tbody>
-			</table>
-			<br>
-			<span id="list" ></span>
-			<br>
-			<br>
-		</div>
-		<div id="showLeft" class="col-sm-1">
-		</div>
-		<div id="show" class="col-sm-3">
-			<span id="display" ></span>
-		</div>
-		<div id="showRight" class="col-sm-4">
-			<span id="update" ></span>
-		</div>
-	</div>
-</body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.dca542c0b3aa3286f72c.js"></script></body>
 </html>
